--- a/src/components/specific/footballFieldCard/footballFieldCard.module.css
+++ b/src/components/specific/footballFieldCard/footballFieldCard.module.css
@@ -1,7 +1,6 @@
 
 .cardContainer {
   position: relative;
-  margin-top: 50px;
   width: 500px;
   height: 300px;
   border-radius: 10px;
@@ -32,7 +31,7 @@
 
 .info {
   position: absolute;
-  width: 500px;
+  width: 100%;
   left: 0;
   top: 130px;
   text-transform: uppercase;
