--- a/src/components/specific/footballFieldCard/footballFieldCard.module.css
+++ b/src/components/specific/footballFieldCard/footballFieldCard.module.css
@@ -1,7 +1,6 @@
 
 .cardContainer {
   position: relative;
-  width: 500px;
   height: 300px;
   border-radius: 10px;
 }
@@ -19,7 +18,7 @@
 
 .cardContainer:hover .overlay {
   display: block;
-  background: rgba(0, 0, 0, .6);
+  background: rgba(0, 0, 0, .8);
 }
 
 .cardContainer img {
@@ -39,6 +38,10 @@
   color: white;
   z-index: 1;
   transition: top .5s ease;
+}
+.info h3{
+  font-weight: 700;
+  -webkit-text-stroke: 2px black;
 }
 .info p {
   opacity: 0;
