--- a/src/pages/Reservations/Reservations.module.css
+++ b/src/pages/Reservations/Reservations.module.css
@@ -6,7 +6,12 @@
   align-items: center;
 }
 .infoSection li {
-  font-size: 2em;
-  font-weight: 700;
+  font-size: 1.5em;
+  font-weight: 500;
   color: #e0e0e0;
+}
+.infoSection li strong{
+  color: #61bc84;
+  font-weight: 900;
+  -webkit-text-stroke: 1px black;
 }
