--- a/src/pages/Reservations/Reservations.module.css
+++ b/src/pages/Reservations/Reservations.module.css
@@ -1,19 +1,17 @@
 .infoSection{
   background-color: #1E1E1E;
-  background-image: radial-gradient(#345e37 2px, transparent 0);
-  background-size: 30px 30px;
-  background-position: -5px -5px;
-  align-items: center;
 }
 .infoSection li {
   font-size: 1.2em;
-  font-weight: 500;
-  color: #1E1E1E;
+  font-weight: 400;
+  color: #FFFFFF;
+  background-color: inherit;
 }
 .infoSection li strong{
+  text-align: start;
   color: #61bc84;
   font-weight: 900;
-  -webkit-text-stroke: 1px black;
+  -webkit-text-stroke: 1px #1E1E1E;
 }
 .button {
   text-align: center;
@@ -24,9 +22,22 @@
   color: white;
   background-color: #1E1E1E;
   border: solid 2px white;
+  border-radius: 1em;
 }
-.infoSection h1, h3 {
+.infoSection h1 {
   color: #61bc84;
-  -webkit-text-stroke: 1px white;
 }
-
+.infoSection h3{
+  color: #61bc84;
+}
+.infoCard{
+  background-color: #454545;
+  border: 3px solid #61bc84;
+  border-radius: 1em;
+  transition: cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.4s;
+  box-shadow: -5px 5px 0px 0px #2E8B57;
+}
+.infoCard img {
+  object-fit: cover;
+  border-radius: 20px;
+}
