--- a/src/pages/FootballFields/FootballFields.module.css
+++ b/src/pages/FootballFields/FootballFields.module.css
@@ -1,16 +1,15 @@
 .seccionCanchas{
   background-color: #1E1E1E;
-  background-image: radial-gradient(#345e37 2px, transparent 0);
-  background-size: 30px 30px;
-  background-position: -5px -5px;
-  color:white;
+  color:#61bc84;
 }
 .sideBar{
-  border-radius: 0 15px 15px 0;
-  background-color: #363636;
+  background-color: #454545;
+  border-radius: 10px;
+  border: 3px solid #61bc84;
 }
-/* @media (max-width:993px) {
-  .sideBar{
-    height: 200px;
-  }
-} */
+.cardContainer{
+  /* background-color: #345e37a6; */
+  background-color: #454545;
+  border-radius: 1em;
+  border: 3px solid #61bc84;
+}
