--- a/src/components/specific/cardProducts/CardProducts.module.css
+++ b/src/components/specific/cardProducts/CardProducts.module.css
@@ -41,20 +41,19 @@
 
 }
 
-.boxShadow:hover {
-    -webkit-transition: box-shadow 0.1s linear;
-    -moz-transition: box-shadow 0.1s linear;
-    -ms-transition: box-shadow 0.1s linear;
-    -o-transition: box-shadow 0.1s linear;
-    transition: box-shadow 0.1s linear;
+.createButton {
+    font-size: 1rem;
+    /* padding: 0.8em 2em; */
+    background-color: #454545;
+    border: 3px solid #61bc84;
+    border-radius: 1em;
+    color: #FFFFFF;
+    font-weight: bolder;
+    transition: cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.4s;
+    box-shadow: -5px 5px 0px 0px #2E8B57;
+  }
+  
+  .createButton:hover {
+    transform: translate(7px, -7px);
+  }
 
-    -webkit-box-shadow: 0px 8px 21px 4px rgba(143, 188, 143, 1);
--moz-box-shadow: 0px 8px 21px 4px rgba(143, 188, 143, 1);
-box-shadow: 0px 8px 21px 4px rgba(143, 188, 143, 1);
-
--webkit-transform: scale(1.02);
--moz-transform: scale(1.02);
--ms-transform: scale(1.02);
--o-transform: scale(1.02);
-transform: scale(1.02);
-}
