--- a/src/pages/Products/Products.module.css
+++ b/src/pages/Products/Products.module.css
@@ -30,7 +30,7 @@
 
 .inputStyles {
     font-size: 1rem;
-    padding: 0.8em 2em;
+    padding: 0.8em 1em;
     background-color: #454545;
     border: 3px solid #61bc84;
     border-radius: 1em;
@@ -38,6 +38,20 @@
     font-weight: bolder;
     transition: cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.4s;
     box-shadow: -5px 5px 0px 0px #2E8B57;
+}
+
+@media (max-width: 340px){
+    .inputStyles {
+        font-size: 0.8rem;
+        padding: 0.8em 1em;
+        background-color: #454545;
+        border: 3px solid #61bc84;
+        border-radius: 1em;
+        color: #FFFFFF;
+        font-weight: bolder;
+        transition: cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.4s;
+        box-shadow: -5px 5px 0px 0px #2E8B57;
+    }
 }
 
 
