Se implementa nueva fuente

--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -11,9 +11,14 @@
 }
 
 .bgLightGreen{
-    /* background-color: #8FBC8F; */
     background: rgb(143,188,143);
-background: linear-gradient(108deg, rgba(143,188,143,1) 45%, rgba(52,94,55,1) 45%);
+    background: linear-gradient(108deg, rgba(143,188,143,1) 45%, rgba(52,94,55,1) 45%);
+}
+.bgLightGreen h4{
+    font-weight: 400;
+}
+.bgLightGreen h5{
+    font-weight: 400;
 }
 .footballFieldsButton {
     font-size: 1rem;
@@ -22,14 +27,14 @@ background: linear-gradient(108deg, rgba(143,188,143,1) 45%, rgba(52,94,55,1) 45
     border: 3px solid #61bc84;
     border-radius: 1em;
     color: #FFFFFF;
-    font-weight: bolder;
+    font-weight: 500;
     transition: cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.4s;
     box-shadow: -5px 5px 0px 0px #2E8B57;
   }
 
 @media (max-width: 500px) {
     .textSize{
-        font-size: 2rem;
+        font-size: 1.4rem;
     }
 
     .logoIconStyle{
