--- a/src/pages/Reservations/Reservations.module.css
+++ b/src/pages/Reservations/Reservations.module.css
@@ -24,6 +24,17 @@
   border: solid 2px white;
   border-radius: 1em;
 }
+.createButton {
+  font-size: 1rem;
+  padding: 0.8em 2em;
+  background-color: #454545;
+  border: 3px solid #61bc84;
+  border-radius: 1em;
+  color: #FFFFFF;
+  font-weight: bolder;
+  transition: cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.4s;
+  box-shadow: -5px 5px 0px 0px #2E8B57;
+}
 .infoSection h1 {
   color: #61bc84;
 }
